[tool.poetry]
name = "orinoco"
version = "1.0.4"
description = "Functional composable pipelines allowing clean separation of the business logic and its implementation"
authors = ["Martin Vo <mvo@paysure.solutions>"]
documentation = "https://orinoco.rtfd.io"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
Sphinx = "^3.5.1"
furo = "^2021.2.28-beta.28"
m2r2 = "^0.2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
